--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -134,12 +134,13 @@
 \item Competitive admission - six places each year
 \item Research interests: Empirical Asset Pricing, Financial Econometrics
 \end{cvitems}}
-    \cventry{Monash University}{Bachelor of Chemical Engineering (Honours) and Bachelor of Commerce}{}{2016 - 2020}{\begin{cvitems}
-\item Engineering specialisation: Chemical Engineering
-\item Commerce major: Finance
-\item Commerce minor: Econometrics
-\item Overall WAM: 83.78; BChemEng(Hons) WAM: 80.87; BCom WAM: 88.19
+    \cventry{Monash University}{Bachelor of Chemical Engineering (Honours)}{}{2016 - 2020}{\begin{cvitems}
+\item BChemEng(Hons) WAM: 80.87
 \item Graduated with H1 First Class Honours
+\end{cvitems}}
+    \cventry{Monash University}{Bachelor of Commerce}{}{2016 - 2020}{\begin{cvitems}
+\item BCom WAM: 88.19
+\item Major: Finance (Average 91.5); Minor: Econometrics (Average 86.1)
 \end{cvitems}}
 \end{cventries}
 
