--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -113,7 +113,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {February 2021}
+  {March 2021}
     {George Baihan Wang~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -163,8 +163,7 @@
 \hypertarget{skills}{%
 \section{Skills}\label{skills}}
 
-R, Python, MATLAB/Octave, LaTeX, Linux, EViews, Aspen Plus, ImageJ,
-Visio
+R, Python, SAS, MATLAB, LaTeX, Linux, EViews, Aspen Plus, ImageJ, Visio
 
 \hypertarget{awards}{%
 \section{Awards}\label{awards}}
