--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -163,7 +163,8 @@
 \hypertarget{skills}{%
 \section{Skills}\label{skills}}
 
-R, Python, SAS, MATLAB, LaTeX, Linux, EViews, Aspen Plus, ImageJ, Visio
+R, Python, SAS, MATLAB/Octave, LaTeX, Linux, EViews, Aspen Plus, ImageJ,
+Visio
 
 \hypertarget{awards}{%
 \section{Awards}\label{awards}}
