--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -113,7 +113,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {March 2021}
+  {April 2021}
     {George Baihan Wang~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -131,8 +131,8 @@
 \begin{cventries}
     \cventry{Monash Universtiy}{Master of Commerce}{}{2021 - 2022}{\begin{cvitems}
 \item Full scholarship research-oriented program offered by the Department of Banking and Finance, Monash Business School
-\item Competitive admission - six places each year
-\item Research interests: Empirical Asset Pricing, Financial Econometrics
+\item Competitive admission - four places in 2021
+\item Research interests: Empirical Asset Pricing, Empirical Corporate Finance
 \end{cvitems}}
     \cventry{Monash University}{Bachelor of Chemical Engineering (Honours)}{}{2016 - 2020}{\begin{cvitems}
 \item BChemEng(Hons) WAM: 80.87
@@ -170,6 +170,8 @@ Visio
 \section{Awards}\label{awards}}
 
 \begin{cventries}
+    \cventry{Monash Business School}{2020 Dean's Honour}{}{Apr. 2021}{}\vspace{-4.0mm}
+    \cventry{CFA Institute}{Chartered Financial Analyst (CFA) - Level I passed}{}{Apr. 2021}{}\vspace{-4.0mm}
     \cventry{Monash Business School}{Graduate Research Scholarship - MCom}{}{Dec. 2020}{}\vspace{-4.0mm}
     \cventry{Global Association of Risk Professionals (GARP)}{Financial Risk Manager (FRM) Certification - Part I cleared}{}{Jan. 2020}{}\vspace{-4.0mm}
     \cventry{CFA Institute}{CFA Student Scholarship}{}{Jan. 2020}{}\vspace{-4.0mm}
