--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -113,7 +113,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {April 2021}
+  {May 2021}
     {George Baihan Wang~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -135,8 +135,7 @@
 \item Research interests: Empirical Asset Pricing, Empirical Corporate Finance
 \end{cvitems}}
     \cventry{Monash University}{Bachelor of Chemical Engineering (Honours)}{}{2016 - 2020}{\begin{cvitems}
-\item BChemEng(Hons) WAM: 80.87
-\item Graduated with H1 First Class Honours
+\item BChemEng(Hons) WAM: 80.87 (H1 First Class Honours)
 \end{cvitems}}
     \cventry{Monash University}{Bachelor of Commerce}{}{2016 - 2020}{\begin{cvitems}
 \item BCom WAM: 88.19
@@ -148,12 +147,8 @@
 \section{Experience}\label{experience}}
 
 \begin{cventries}
-    \cventry{AIM Education}{Head Tutor and Editor - VCE Accounting}{}{Apr. 2016 - Present}{\begin{cvitems}
+    \cventry{AIM Education}{Head Tutor and Editor - VCE Accounting}{}{Apr. 2016 - Nov. 2020}{\begin{cvitems}
 \item Responsible for authoring the company-exclusive teaching package for VCE Accounting, including lecture notes, practice questions and mock exams
-\end{cvitems}}
-    \cventry{HD Education}{Casual Undergraduate Finance Tutor}{}{Mar. 2020 - Jun. 2020}{\begin{cvitems}
-\item Responsible for holding one-on-one and group tutoring for Monash University undergraduate level Finance courses
-\item Taught units include: BFC2751 - Derivatives 1, BFC3241 - Equity and Investment Analysis
 \end{cvitems}}
     \cventry{DuluxGroup}{Student Researcher}{}{Mar. 2020 - Apr. 2020}{\begin{cvitems}
 \item Responsible for conducting an in-depth industrial research project on investigating the effect of polymer synthesis processing on the morphology of the final polymer particle, and in turn its effect on paint properties
