--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -147,12 +147,8 @@
 \section{Experience}\label{experience}}
 
 \begin{cventries}
-    \cventry{AIM Education}{Head Tutor and Editor - VCE Accounting}{}{Apr. 2016 - Nov. 2020}{\begin{cvitems}
-\item Responsible for authoring the company-exclusive teaching package for VCE Accounting, including lecture notes, practice questions and mock exams
-\end{cvitems}}
-    \cventry{DuluxGroup}{Student Researcher}{}{Mar. 2020 - Apr. 2020}{\begin{cvitems}
-\item Responsible for conducting an in-depth industrial research project on investigating the effect of polymer synthesis processing on the morphology of the final polymer particle, and in turn its effect on paint properties
-\end{cvitems}}
+    \cventry{AIM Education}{Head Tutor and Editor - VCE Accounting}{}{Apr. 2016 - Nov. 2020}{}\vspace{-4.0mm}
+    \cventry{DuluxGroup}{Student Researcher in Polymer Chemistry}{}{Mar. 2020 - Apr. 2020}{}\vspace{-4.0mm}
 \end{cventries}
 
 \hypertarget{skills}{%
@@ -165,6 +161,7 @@ Visio
 \section{Awards}\label{awards}}
 
 \begin{cventries}
+    \cventry{Monash University}{Faculty of Engineering Dean's Honours List 2020}{}{May 2021}{}\vspace{-4.0mm}
     \cventry{Monash Business School}{2020 Dean's Honour}{}{Apr. 2021}{}\vspace{-4.0mm}
     \cventry{CFA Institute}{Chartered Financial Analyst (CFA) - Level I passed}{}{Apr. 2021}{}\vspace{-4.0mm}
     \cventry{Monash Business School}{Graduate Research Scholarship - MCom}{}{Dec. 2020}{}\vspace{-4.0mm}
