--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -57,12 +57,12 @@
 
 \name{George Baihan Wang}{}
 
-\position{MCom Research Candidate - Banking \& Finance}
+\position{MCom Research Student - Banking \& Finance}
 \address{Melbourne, Victoria, Australia}
 
 \mobile{+61 424 928 616}
 \email{\href{mailto:george.baihan.wang@gmail.com}{\nolinkurl{george.baihan.wang@gmail.com}}}
-\homepage{georgewang.rbind.io}
+\homepage{georgebaihanwang.com}
 \github{georgebwang}
 \linkedin{george-baihan-wang}
 
@@ -113,7 +113,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {May 2021}
+  {June 2021}
     {George Baihan Wang~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -148,14 +148,15 @@
 
 \begin{cventries}
     \cventry{AIM Education}{Head Tutor and Editor - VCE Accounting}{}{Apr. 2016 - Nov. 2020}{}\vspace{-4.0mm}
-    \cventry{DuluxGroup}{Student Researcher in Polymer Chemistry}{}{Mar. 2020 - Apr. 2020}{}\vspace{-4.0mm}
+    \cventry{DuluxGroup}{Student Researcher - Polymer Chemistry}{}{Mar. 2020 - Apr. 2020}{}\vspace{-4.0mm}
 \end{cventries}
 
 \hypertarget{skills}{%
 \section{Skills}\label{skills}}
 
-R, Python, SAS, MATLAB/Octave, LaTeX, Linux, EViews, Aspen Plus, ImageJ,
-Visio
+R \textbar{} Python \textbar{} SAS \textbar{} MATLAB \textbar{} LaTeX
+\textbar{} Linux \textbar{} EView \textbar{} Aspen Plus \textbar{}
+ImageJ \textbar{} Visio
 
 \hypertarget{awards}{%
 \section{Awards}\label{awards}}
