--- a/GeorgeWang-CV/GeorgeWang-CV.tex
+++ b/GeorgeWang-CV/GeorgeWang-CV.tex
@@ -113,7 +113,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {June 2021}
+  {July 2021}
     {George Baihan Wang~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -129,17 +129,16 @@
 \section{Education}\label{education}}
 
 \begin{cventries}
-    \cventry{Monash Universtiy}{Master of Commerce}{}{2021 - 2022}{\begin{cvitems}
+    \cventry{Monash Business School}{Master of Commerce}{}{2021 - 2022}{\begin{cvitems}
 \item Full scholarship research-oriented program offered by the Department of Banking and Finance, Monash Business School
-\item Competitive admission - four places in 2021
-\item Research interests: Empirical Asset Pricing, Empirical Corporate Finance
+\item MCom WAM: 93.50 (ongoing)
 \end{cvitems}}
     \cventry{Monash University}{Bachelor of Chemical Engineering (Honours)}{}{2016 - 2020}{\begin{cvitems}
 \item BChemEng(Hons) WAM: 80.87 (H1 First Class Honours)
 \end{cvitems}}
     \cventry{Monash University}{Bachelor of Commerce}{}{2016 - 2020}{\begin{cvitems}
 \item BCom WAM: 88.19
-\item Major: Finance (Average 91.5); Minor: Econometrics (Average 86.1)
+\item Major: Finance | Minor: Econometrics
 \end{cvitems}}
 \end{cventries}
 
@@ -155,7 +154,7 @@
 \section{Skills}\label{skills}}
 
 R \textbar{} Python \textbar{} SAS \textbar{} MATLAB \textbar{} LaTeX
-\textbar{} Linux \textbar{} EView \textbar{} Aspen Plus \textbar{}
+\textbar{} Linux \textbar{} EViews \textbar{} Aspen Plus \textbar{}
 ImageJ \textbar{} Visio
 
 \hypertarget{awards}{%
